--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./server/server.js",
   "type": "module",
   "scripts": {
-    "installDeps": "npm install --prefix ./client && npm install --prefix ./server",
+    "setup": "npm install --prefix ./client && npm install",
     "production": "npm run build --prefix ./client && node ./server/server.js",
     "dev:client": "npm start --prefix ./client",
     "dev:server": "nodemon ./server/server.js"
