--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "npm install --prefix ./client && npm install && npm run build --prefix ./client",
     "start": "node ./server/server.js",
+    "build-start": "npm install --prefix ./client && npm install && npm run build --prefix ./client && node ./server/server.js",
     "dev:client": "npm start --prefix ./client",
     "dev:server": "nodemon ./server/server.js"
   },
